--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-selenium==3.141.0
-firebase-admin==2.17.0
-tabulate==0.8.7
+selenium==4.15.2
+firebase-admin==6.2.0
+python-dotenv==1.0.0
+autopep8==2.0.4
 ```
